[package]
name = "crawler"
version = "0.1.0"
edition = "2021"
publish = ["afo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
html = "0.6.3"
http-body-util = "0.1.2"
hyper = { version = "1.3.1", features = ["client"] }
hyper-util = { version = "0.1.5", features = ["full"] }
reqwest = "0.12.5"
scraper = "0.19.0"
tokio = { version = "1.38.0", features = ["rt", "full"] }
